--- a/main.html
+++ b/main.html
@@ -7,9 +7,27 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<table>
+		<tr>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</tr>
+		<tr>
+			<td>
+				<ol>
+					<li><img src="https://picsum.photos/id/123/200/300" alt"dhuf"></li>
+					<li><video  controls>
+						<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+					</video></li>
+					<li >
+						<audio controls>
+							<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+						</audio>
+					</li>
+				</ol>
+			</td>
+		</tr>
+	</table>
 
 </body>
 
