--- a/main.html
+++ b/main.html
@@ -20,8 +20,7 @@
 						<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 					</video></li>
 					<li >
-						<audio controls>
-							<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+						<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
 						</audio>
 					</li>
 				</ol>
