--- a/main.html
+++ b/main.html
@@ -8,12 +8,28 @@
 
 <body>
 	<table>
+		<thead>
 		<tr>
 			<th>Roll numbers</th>
 			<th>Names</th>
 		</tr>
-		<tr>
-			<td>
+			</thead>
+		<tbody>
+			<tr>
+				<td>hfr</td>
+				<td>jfhrwiu</td>
+			</tr>
+			<tr>
+				<td>hfr</td>
+				<td>jfhrwiu</td>
+			</tr>
+			<tr>
+				<td>hfr</td>
+				<td>jfhrwiu</td>
+			</tr>
+		</tbody>
+	</table>
+		List of medias
 				<ol>
 					<li><img src="https://picsum.photos/id/123/200/300" alt"dhuf"></li>
 					<li><video  controls>
@@ -26,7 +42,7 @@
 				</ol>
 			</td>
 		</tr>
-	</table>
+	
 
 </body>
 
