--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
 	</table>
 		List of medias
 				<ol>
-					<li><img src="https://picsum.photos/id/123/200/300" alt"dhuf"></li>
+					<li><img src="https://picsum.photos/id/123/200/300" alt="dkhgtydyr"></li>
 					<li><video  controls>
 						<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 					</video></li>
